[Mimic]bump and new OSD setup

--- a/005_ceph_storage_cluster/002_osd.md
+++ b/005_ceph_storage_cluster/002_osd.md
@@ -17,7 +17,7 @@ xfs: in production <br/>
 btrfs: would be better <br/>
 non-fs backend like leveldb are experimental at the moment (Jewel) <br/>
 Journal on SSDs or NVRAM <br/>
-
+Luminous+: bluestore as file storage<br/> 
 communicate with each other and report unreachable OSD to MONs<br/>
 ~~~ENDSECTION~~~
 
