[Layout]added images and improved pdf

--- a/010_rbd/040_rbd.md
+++ b/010_rbd/040_rbd.md
@@ -97,7 +97,7 @@ Kernel 3.10, if inevitable (CentOS 7 default)
 
 <br\>
 
-* Kernel v4.5 (recommeded)
+* Kernel v4.5 (recommended)
 * Qemu >= 0.14.0 
 
 !SLIDE lrbullets small
