[review] changed some setup approaches

--- a/010_rbd/040_rbd.md
+++ b/010_rbd/040_rbd.md
@@ -58,9 +58,9 @@ C: 512byte see sgdisk -p /dev/sda
 # RBD Commands: create, resize and remove
 
 
-    # rbd create training --size 16M
+    # rbd -p rbd create training --size 16M
 
-    # rbd resize --size 250G [--allow-shrink] training
+    # rbd resize --size 250G [--allow-shrink] rbd/training
 
     # rbd info training
     rbd image 'training':
@@ -70,7 +70,7 @@ C: 512byte see sgdisk -p /dev/sda
      	format: 2
      	features: layering
 
-    # rbd rm training
+    # rbd rm rbd/training
 
 !SLIDE lrbullets noprint
 # Access an RBD
@@ -105,7 +105,7 @@ Kernel 3.10, if inevitable (CentOS 7 default)
 
 <br/>
 
-    # rbd map training
+    # rbd map rbd/training
     /dev/rbd0
 
     # rbd showmapped
@@ -147,8 +147,8 @@ Kernel 3.10, if inevitable (CentOS 7 default)
 
 create and map an RBD
 
-    # rbd create --size 2G myrbd
-    # rbd map myrbd
+    # rbd -p rbd create --size 2G myrbd
+    # rbd map rbd/myrbd
 
 create FS on the RBD
 
