[rbd]needs poolname for querying

--- a/010_rbd/040_rbd.md
+++ b/010_rbd/040_rbd.md
@@ -167,11 +167,11 @@ list connected clients
 count the objects used by the RBD
     
     # rbd info myrbd
-    # rados ls | grep <prefix> | wc -l
+    # rados -p rbd ls | grep <prefix> | wc -l
 
 insert data and count again
 
-    # rados ls | grep <prefix> | wc -l
+    # rados -p rbd ls | grep <prefix> | wc -l
 
 
 
